Добавляет изменения в логтип в хедере на всех страницах

--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -9,7 +9,6 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  align-items: center;
 
   height: 65px;
 
@@ -23,49 +22,35 @@
 }
 
 .page-header__logo {
+  cursor: pointer;
+  fill: #111111;
+
+  --yellow-fill: #fdc305;
+  --red-fill: #f06351;
+}
+
+.page-header__logo--mobile {
+  display: block;
   width: 191px;
   height: 38px;
-
-  cursor: pointer;
 }
 
-.page-header__logo--black {
-  fill: #111111;
+.page-header__logo--tablet,
+.page-header__logo--desktop {
+  display: none;
 }
 
-.page-header__logo--yellow {
-  fill: #fdc305;
-}
-
-.page-header__logo--red {
-  fill: #f06351;
-}
-
-.page-header__link:hover .page-header__logo--black,
-.page-header__link:focus .page-header__logo--black {
+.page-header__link:hover .page-header__logo,
+.page-header__link:focus .page-header__logo {
   fill: rgba(17, 17, 17, 0.8);
+  --yellow-fill: rgba(252, 195, 5, 0.8);
+  --red-fill: rgba(239, 98, 81, 0.8);
 }
 
-.page-header__link:hover .page-header__logo--yellow,
-.page-header__link:focus .page-header__logo--yellow {
-  fill: rgba(252, 195, 5, 0.8);
-}
-
-.page-header__link:hover .page-header__logo--red,
-.page-header__link:focus .page-header__logo--red {
-  fill: rgba(239, 98, 81, 0.8);
-}
-
-.page-header__link:active .page-header__logo--black {
+.page-header__link:active .page-header__logo {
   fill: rgba(17, 17, 17, 0.6);
-}
-
-.page-header__link:active .page-header__logo--yellow {
-  fill: rgba(252, 195, 5, 0.6);
-}
-
-.page-header__link:active .page-header__logo--red {
-  fill: rgba(239, 98, 81, 0.6);
+  --yellow-fill: rgba(252, 195, 5, 0.6);
+  --red-fill: rgba(239, 98, 81, 0.6);
 }
 
 .main-nav__button {
@@ -177,9 +162,18 @@
     border: none;
   }
 
-  .page-header__logo {
+  .page-header__logo--tablet {
+    display: block;
+
     width: 173px;
     height: 58px;
+
+    padding-top: 15px;
+  }
+
+  .page-header__logo--mobile,
+  .page-header__logo--desktop {
+    display: none;
   }
 
   .main-nav__button {
@@ -239,9 +233,18 @@
     background-color: transparent;
   }
 
-  .page-header__logo {
+  .page-header__logo--desktop {
+    display: block;
+
     width: 202px;
     height: 59px;
+
+    padding-top: 26px;
+  }
+
+  .page-header__logo--mobile,
+  .page-header__logo--tablet {
+    display: none;
   }
 
   .site-list__item {
