Устраняет замечания валидатора

--- a/source/less/blocks/extra.less
+++ b/source/less/blocks/extra.less
@@ -188,7 +188,7 @@
   }
 
   .additional-list__order-button {
-    .tablet-button-green();
+    .tablet-button-green-small();
     width: 633px;
     margin: 0 auto;
   }
