--- a/source/less/blocks/catalog.less
+++ b/source/less/blocks/catalog.less
@@ -79,7 +79,10 @@
   font-family: @additional-font;
   font-size: 12px;
   line-height: 1.35;
+
   color: @font-color-grey;
+
+  border: 0;
   border-collapse: collapse;
 }
 
