--- a/source/less/blocks/contacts.less
+++ b/source/less/blocks/contacts.less
@@ -57,7 +57,7 @@
   position: absolute;
   top: 0;
   left: 0;
-  z-index: 2;
+  z-index: 3;
 
   width: 320px;
   height: 362px;
@@ -74,6 +74,23 @@
 
   width: 320px;
   height: 362px;
+}
+
+.contacts__map-open::before {
+  content: "";
+
+  position: absolute;
+  top: 155px;
+  left: 130px;
+
+  z-index: 2;
+
+  width: 55px;
+  height: 53px;
+  background-image: url("/img/map-pin.png");
+  background-repeat: no-repeat;
+  background-size: 55px 53px;
+  background-position: center;
 }
 
 .contacts__map {
@@ -139,6 +156,16 @@
     height: 396px;
   }
 
+  .contacts__map-open::before {
+    top: 145px;
+    left: 340px;
+
+    width: 113px;
+    height: 106px;
+
+    background-size: 113px 106px;
+  }
+
   .contacts__map {
     width: 768px;
     height: 396px;
@@ -158,7 +185,7 @@
     position: absolute;
     top: 95px;
     left: 110px;
-    z-index: 3;
+    z-index: 4;
 
     align-items: center;
     width: 402px;
@@ -190,6 +217,11 @@
   .contacts__iframe {
     width: 1440px;
     height: 400px;
+  }
+
+  .contacts__map-open::before {
+    top: 150px;
+    left: 1000px;
   }
 
   .contacts__map {
