--- a/source/less/blocks/extra.less
+++ b/source/less/blocks/extra.less
@@ -4,6 +4,8 @@
 }
 
 .extra__title {
+  position: relative;
+
   font-size: 24px;
   line-height: 1;
   font-weight: 400;
@@ -15,6 +17,19 @@
 
   margin-top: 30px;
   margin-bottom: 0;
+}
+
+.extra__title::after {
+  content: "";
+
+  position: absolute;
+  top: 14px;
+  right: -20px;
+
+  width: 53px;
+  height: 3px;
+
+  background-color: @bg-color-green;
 }
 
 .extra__list {
