Добавляет немножко доступности

--- a/source/less/blocks/extra.less
+++ b/source/less/blocks/extra.less
@@ -47,6 +47,10 @@
   border-bottom: @border;
 }
 
+.additional-list__link {
+  text-decoration: none;
+}
+
 .additional-list__title {
   font-family: @main-font;
   font-size: 16px;
