--- a/source/less/blocks/categories.less
+++ b/source/less/blocks/categories.less
@@ -12,13 +12,14 @@
 
 .categories__item {
   width: 280px;
-  height: 235px;
+  min-height: 212px;
 
   color: @font-color-black;
 
   background-color: @bg-color-grey;
 
   padding-top: 30px;
+  padding-bottom: 15px;
 
   margin-top: 20px;
 }
@@ -97,7 +98,7 @@
 
   border-bottom: @border;
 
-  padding-bottom: 21px;
+  padding-bottom: 19px;
 
   margin: 0 20px;
   margin-bottom: 18px;
@@ -173,9 +174,10 @@
 
   .categories__item {
     width: 653px;
-    height: 297px;
+    min-height: 234px;
 
     padding-top: 75px;
+    padding-bottom: 59px;
     padding-left: 53px;
 
     margin-top: 30px;
@@ -279,9 +281,10 @@
 
   .categories__item {
     width: 518px;
-    height: 297px;
+    min-height: 234px;
 
     padding-top: 75px;
+    padding-bottom: 58px;
     padding-left: 52px;
 
     margin-right: 80px;
@@ -330,12 +333,11 @@
 
   .categories__description {
     max-width: 465px;
-    height: 63px;
-    padding-bottom: 40px;
+    padding-bottom: 30px;
   }
 
   .categories__item:nth-child(2) .categories__description {
-    padding-bottom: 40px;
+    padding-bottom: 30px;
   }
 
   .categories__button::before {
