--- a/source/less/blocks/example.less
+++ b/source/less/blocks/example.less
@@ -240,7 +240,7 @@
 
   .example__txt {
     width: 160px;
-    height: 40px;
+    min-height: 40px;
     font-size: 30px;
     line-height: 1.24;
 
@@ -500,6 +500,10 @@
     max-width: 330px;
     text-align: justify;
     margin-top: 62px;
+  }
+
+  .example__price {
+    padding-left: 60px;
   }
 
   .example__toggle-block {
