--- a/source/less/variables.less
+++ b/source/less/variables.less
@@ -167,9 +167,67 @@
   }
 }
 
+.catalog-btn-green-big() {
+  display: block;
+  width: 280px;
+  height: 20px;
+
+  font-family: @main-font;
+  font-size: 16px;
+  line-height: 1.25;
+  text-align: @text-align;
+  text-decoration: @text-decoration;
+  text-transform: @text-transform;
+  color: @font-color-white;
+
+  background-color: @bg-color-green;
+
+  padding-top: 10px;
+  padding-bottom: 10px;
+
+  &:hover,
+  &:focus {
+    background-color: #5eaa2f;
+  }
+
+  &:active {
+    background-color: #5eaa2f;
+    color: rgba(255, 255, 255, 0.3);
+  }
+}
+
 .catalog-button-grey() {
   display: block;
   width: 249px;
+  height: 20px;
+
+  font-family: @main-font;
+  font-size: 16px;
+  line-height: 1.25;
+  text-align: @text-align;
+  text-decoration: @text-decoration;
+  text-transform: @text-transform;
+  color: @font-color-black;
+
+  background-color: @bg-color-grey;
+
+  padding-top: 10px;
+  padding-bottom: 10px;
+
+  &:hover,
+  &:focus {
+    background-color: #ebebeb;
+  }
+
+  &:active {
+    background-color: #ebebeb;
+    color: rgba(68, 68, 68, 0.3);
+  }
+}
+
+.catalog-btn-grey-big() {
+  display: block;
+  width: 280px;
   height: 20px;
 
   font-family: @main-font;
