--- a/source/less/blocks/advantages.less
+++ b/source/less/blocks/advantages.less
@@ -11,7 +11,7 @@
   font-weight: 400;
   color: @font-color-black;
   margin: 0;
-  margin-bottom: 27px;
+  margin-bottom: 29px;
 }
 
 .advantages__list {
@@ -84,7 +84,7 @@
 
     flex-direction: column;
     max-width: 245px;
-    height: 230px;
+    min-height: 230px;
 
     margin-top: 72px;
     margin-right: 140px;
