--- a/source/less/blocks/intro.less
+++ b/source/less/blocks/intro.less
@@ -11,7 +11,8 @@
 .intro__first-screen {
   position: relative;
   max-width: 320px;
-  height: 277px;
+  min-height: 305px;
+  height: auto;
 
   text-align: @text-align;
 
@@ -20,8 +21,6 @@
   background-position: center;
   background-size: 320px 305px;
   background-repeat: @bg-repeat;
-
-  padding-top: 28px;
 
   margin: 0 auto;
 }
@@ -32,6 +31,8 @@
   line-height: 1;
   font-weight: 400;
   color: @font-color-white;
+
+  padding-top: 28px;
 
   margin: 0;
   margin-bottom: 24px;
@@ -68,16 +69,17 @@
 @media (min-width: @tablet-width) {
   .intro {
     max-width: 708px;
-    height: 805px;
+    min-height: 805px;
   }
 
   .intro__first-screen {
     max-width: 427px;
-    height: 180px;
+    min-height: 180px;
+    height: auto;
 
     text-align: left;
 
-    background-color: @bg-color-white;
+    background-color: transparent;
     background-image: none;
 
     padding-top: 0;
@@ -90,6 +92,7 @@
     font-size: 60px;
     line-height: 1;
     color: @font-color-black;
+    padding-top: 0;
     margin: 0;
   }
 
@@ -123,7 +126,7 @@
 @media (min-width: @desktop-width) {
   .intro {
     max-width: 1220px;
-    height: 470px;
+    min-height: 470px;
 
     margin-top: 50px;
   }
