Добавляет исправления по критериям Д7, Д17, Д18

--- a/source/less/blocks/catalog.less
+++ b/source/less/blocks/catalog.less
@@ -162,7 +162,7 @@
 
   .product-list__item {
     width: 324px;
-    min-height: 391px;
+    min-height: 194px;
     text-align: center;
 
     background-color: @bg-color-grey;
@@ -190,7 +190,15 @@
   }
 
   .product-list__item:nth-child(n+7) {
-    margin-bottom: 40px;
+    margin-bottom: 48px;
+  }
+
+  .product-list__link--img {
+    display: block;
+    max-width: inherit;
+    min-height: 197px;
+
+    margin-top: -82px;
   }
 
   .product-list__img {
@@ -211,7 +219,7 @@
     width: 249px;
 
     margin: 0 auto;
-    margin-top: 164px;
+    margin-top: 49px;
   }
 
   .product-list__title {
@@ -295,7 +303,7 @@
   .product-list__item {
     width: 245px;
     margin-right: 80px;
-    margin-bottom: 142px;
+    margin-bottom: 143px;
   }
 
   .product-list__item:nth-child(2n) {
@@ -307,7 +315,7 @@
   }
 
   .product-list__item:nth-child(n+5) {
-    margin-bottom: 47px;
+    margin-bottom: 55px;
   }
 
   .product-list__item:last-child {
