--- a/source/less/blocks/extra.less
+++ b/source/less/blocks/extra.less
@@ -15,7 +15,7 @@
 
   border-bottom: @border;
 
-  margin-top: 20px;
+  margin-top: 30px;
   margin-bottom: 0;
 }
 
@@ -43,7 +43,7 @@
 }
 
 .additional-list__item {
-  padding-bottom: 17px;
+  padding-bottom: 16px;
   border-bottom: @border;
 }
 
@@ -140,6 +140,7 @@
 
     border: none;
 
+    margin-top: 20px;
     margin-bottom: 77px;
     margin-left: 37px;
   }
@@ -198,6 +199,7 @@
   .additional-list__table {
     font-size: 16px;
     line-height: 1.25;
+    margin-top: 5px;
     margin-right: 32px;
   }
 
@@ -294,8 +296,13 @@
 
     padding-bottom: 0;
 
+    border-bottom: none;
     border-left: none;
     border-right: none;
+  }
+
+  .additional-list__item:last-child {
+    border-bottom: @border;
   }
 
   .additional-list__title {
@@ -304,6 +311,7 @@
   }
 
   .additional-list__table {
+    margin-top: 8px;
     margin-right: 45px;
     margin-left: 80px;
   }
@@ -344,11 +352,12 @@
 
   .stock__logo {
     margin: 0 auto;
-    margin-top: 30px;
+    margin-top: 35px;
   }
 
   .stock__txt {
     text-align: center;
     margin: 0 auto;
+    margin-bottom: 10px;
   }
 }
